change display of the products and category button as well as in media queries

--- a/scss/_category.scss
+++ b/scss/_category.scss
@@ -23,8 +23,11 @@
     }
 }
 
+
+
 .row-category-btn {
-    text-align: center;
+    width: 1290px;
+    margin: auto;
    
     .btn-primary {
         width: 200px;
